[package]
name = "fb_poster"
version = "0.1.0"
authors = ["Atrem Zavadskiy haramzayka@gmail.com"]
edition = "2021"


description = "An unofficial Rust API client for Facebook post uploads."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
