[package]
name = "fb_poster"
version = "0.1.6"
authors = ["Atrem Zavadskyi haramzayka@gmail.com"]
edition = "2021"


description = "An unofficial Rust API client for Facebook post uploads."
keywords = ["facebook", "api"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
reqwest = { version = "0.11.24", features = ["multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
