[package]
name = "fb_poster"
version = "0.1.8"
authors = ["Atrem Zavadskyi haramzayka@gmail.com"]
edition = "2021"


description = "An unofficial Rust API client for Facebook post uploads."
keywords = ["facebook", "api"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
reqwest = { version = "0.12.2", features = ["multipart"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"